--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,15 @@ logging.level.org.atmosphere = warn
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 
-lost.tribe.logo=C:/Users/Admin/Downloads/jumpree logo.png
+#lost.tribe.logo=C:/Users/user/Downloads/black.png
+lost.tribe.logo=C:/Users/Admin/Downloads/black.png
 
 server.port=9000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tlt_console
 spring.datasource.username=root
 spring.datasource.password=root
+#spring.datasource.password=anup123$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.org.apache.http=DEBUG
